--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ python-decouple = "*"
 whitenoise = "*"
 dj-database-url = "*"
 gunicorn = "*"
+django-heroku = "*"
 
 [requires]
 python_version = "3.8"
